--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,6 +1,6 @@
 .map-box { /* Map container */
     width: 100%;
-    height: 45vh;
+    height: 55vh;
     position: absolute;
     top: 0;
     left: 0;
@@ -12,11 +12,24 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: 55vh;
+    height: 45vh;
     border-radius: 10px;
     overflow-y: scroll;
     z-index: 2;
 }
+
+/* Change map to res ratio depending on breakpoints */
+@media screen and (min-width: 576px) {
+    .map-box {
+        height: 45vh;
+    }
+    
+    .res-box {
+        height: 55vh;
+    }
+}
+
+
 
 .marker { /* Map markers */
     color: #4f4f4f;
