--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,9 +1,11 @@
 .map-box { /* Map container */
     width: 100%;
-    height: 55vh;
+    height: 45vh;
     position: absolute;
     top: 0;
     left: 0;
+    margin: 0;
+    padding: 0;
     z-index: -1;
 }
 
@@ -12,7 +14,9 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: 45vh;
+    margin: 0;
+    padding: 0;
+    height: 55vh;
     border-radius: 10px;
     overflow-y: scroll;
     z-index: 2;
